text changer handler

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 <button id="skyblue">skyblue</button>
     
 
+<!-- best practice  -->
+<button id="gold-color">Come and Click</button>
 
 
-
-
-
-
+<!-- text changer -->
+<h1 id="title-text">Hello World</h1>
+<button id="btn-changer">Change the text</button>
 
 
 
