addEventListener mouse enter

--- a/index.html
+++ b/index.html
@@ -55,6 +55,38 @@
  <label id="name" for="text">No Name</label><br>
  <input id="catch-value" type="text" placeholder="Enter your name">
  <button id="btn-update">Submit</button>
+<br>
+<br>
+<br>
+<br>
+
+
+<!-- <div class="container" id="container" >
+    <div class="comment-container" id="comment-container" style="background-color: palevioletred; margin: 10px; padding: 10px; border-radius: 10px; max-width: 400px;">
+        <p id="comment" style="background-color: palevioletred; margin: 10px; padding: 10px; border: 1px solid blueviolet; border-radius: 10px; max-width: 400px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi excepturi ab molestias fugiat eius error? Consequatur consectetur quo nemo odio ea iste. Sit neque tempore optio nisi error, dicta fugiat.</p>
+          <p id="comment" style="background-color: palevioletred; margin: 10px; padding: 10px; border: 1px solid blueviolet; border-radius: 10px; max-width: 400px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi excepturi ab molestias fugiat eius error? Consequatur consectetur quo nemo odio ea iste. Sit neque tempore optio nisi error, dicta fugiat.</p>
+          <p id="comment" style="background-color: palevioletred; margin: 10px; padding: 10px; border: 1px solid blueviolet; border-radius: 10px; max-width: 400px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi excepturi ab molestias fugiat eius error? Consequatur consectetur quo nemo odio ea iste. Sit neque tempore optio nisi error, dicta fugiat.</p>
+    </div>
+    <textarea style="border-radius: 10px; padding: 8px" name="" id="comment-text-box" cols="40" rows="5"></textarea>
+    <button id="btn-for-comment">POST</button>
+</div> -->
+
+
+
+    <button id="btn-mouse">Mouse</button>
+
+
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+
+
 
 
     <script>
