--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM</title>
 </head>
-<body>
+<body style="padding: 20px;">
     <!-- querySelector -->
     <h1>Hello Dom</h1>
     <!-- querySelector -->
@@ -13,7 +13,7 @@
     <!-- getElementById -->
     <h2 id="headingOne">Sahid</h2>
     <!-- getElementById -->
-
+    <a href="github.html" style="padding: 15px 10px ; background-color: cadetblue; border-radius: 10px; text-decoration: none;">GitHub Page</a>
     <!-- getElementsByClassName -->
     <p class="classSelector">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sint asperiores saepe corporis illum tempora veniam minima molestiae tenetur cupiditate explicabo facilis sapiente, magnam tempore? Nisi magnam facilis tempora? Libero.</p>
     <p class="classSelector">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sint asperiores saepe corporis illum tempora veniam minima molestiae tenetur cupiditate explicabo facilis sapiente, magnam tempore? Nisi magnam facilis tempora? Libero.</p>
