--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2 id="headingOne">Sahid</h2>
     <!-- getElementById -->
     <a href="github.html" style="padding: 15px 10px ; background-color: cadetblue; border-radius: 10px; text-decoration: none;">GitHub Page</a>
+    <a href="delete-item-list.html" style="padding: 15px 10px ; background-color: cadetblue; border-radius: 10px; text-decoration: none;">Items Page</a>
     <!-- getElementsByClassName -->
     <p class="classSelector">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sint asperiores saepe corporis illum tempora veniam minima molestiae tenetur cupiditate explicabo facilis sapiente, magnam tempore? Nisi magnam facilis tempora? Libero.</p>
     <p class="classSelector">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sint asperiores saepe corporis illum tempora veniam minima molestiae tenetur cupiditate explicabo facilis sapiente, magnam tempore? Nisi magnam facilis tempora? Libero.</p>
