add event delegate

--- a/delete-item-list.html
+++ b/delete-item-list.html
@@ -6,6 +6,7 @@
     <title>Items List</title>
 </head>
 <body>
+        <a href="index.html" style="padding: 15px 10px ; background-color: cadetblue; border-radius: 10px; text-decoration: none;">Main Page</a>
     <section id="full-section">
         <ul id="ul-list">
             <ol id="item-list">
