--- a/event-delegate.html
+++ b/event-delegate.html
@@ -6,7 +6,7 @@
     <title>Event Delegate</title>
 </head>
 <body>
-        <a href="index.html" style="padding: 15px 10px ; background-color: cadetblue; border-radius: 10px; text-decoration: none;">Main Page</a>
+<a href="index.html" style="padding: 15px 10px ; background-color: cadetblue; border-radius: 10px; text-decoration: none;">Main Page</a>
     <section id="full-section">
         <ul id="ul-list">
             <ol id="item-list">
@@ -18,17 +18,30 @@
                 <li class="items">Khulna</li>
             </ol>
         </ul>
+        <button id="btn-add-item">Add Items</button>
     </section>
 
-<!-- incompete -->
+
  
-    <!-- <script>
-        const items = document.getElementsByClassName('items');
-        for(const itm of items){
-            document.addEventListener('click',function(event){
-                console.log(event.target);
-            })
-        }
-    </script> -->
+    <script>
+        // const items = document.getElementsByClassName('items');
+        // for(const itm of items){
+        //     itm.addEventListener('click',function(event){
+        //         event.target.parentNode.removeChild(event.target);
+        //     })
+        // }
+
+        document.getElementById('item-list').addEventListener('click',function(){
+            event.target.parentNode.removeChild(event.target);
+        })
+
+        document.getElementById('btn-add-item').addEventListener('click',function(){
+            const ol = document.getElementById('item-list');
+            const li = document.createElement('li');
+            li.classList.add('items');
+            li.innerText = "Barishal";
+            ol.appendChild(li);
+        })
+    </script>
 </body>
 </html>
